# ORPilot

./: .gitignore  LICENSE  README.md  orpilot.toml  pyproject.toml
benchmarks/: README.md
benchmarks/nlp4lp/001_transportation/: expected.json  problem.txt
benchmarks/nlp4lp/002_knapsack/: expected.json  ir.json  problem.txt
demo/data/: bigM.csv  demand.csv  fixed_cost_open_dcs.csv  fixed_cost_open_sites.csv  holding_cost_dcs.csv  holding_cost_sites.csv  operating_cost_dcs.csv  operating_cost_sites.csv  production_capacity.csv  production_cost.csv  revenue.csv  sets.csv  storage_capacity_dcs.csv  storage_capacity_sites.csv  throughput_capacity.csv  transport_cost_dc_to_cust.csv  transport_cost_prod_to_dc.csv
demo/output/: data.json  ir.json  metrics.json  model.py  optimization_summary.txt  report.md  session.json  solution_flow_dc_to_cust.csv  solution_flow_prod_to_dc.csv  solution_inv_dc.csv  solution_inv_site.csv  solution_open_dc.csv  solution_open_site.csv  solution_prod.csv
docs/en/guides/: ir-schema.md  writing-ir.md
examples/facility_location/: README.md  problem.txt
examples/job_assignment/: README.md  ir.json  problem.txt
examples/knapsack/: README.md  problem.txt
examples/production_planning/: README.md  problem.txt
examples/transportation/: README.md  ir.json  problem.txt
orpilot/: __init__.py  cli.py  config.py  paths.py
orpilot/benchmark/: case.py  ingestor.py  loader.py  loader_hf.py  runner.py
orpilot/codegen/: __init__.py  cache.py  data_validator.py  diagnostics.py  emitter.py  executor.py  ir_compiler.py  ir_validator.py
orpilot/codegen/backends/: __init__.py  cplex.py  gurobi.py  gurobi_c.py  ortools.py  pulp.py  pyomo.py
orpilot/codegen/passes/: __init__.py
orpilot/llm/: anthropic.py  base.py  config.py  gemini.py  openai.py  strategy.py
orpilot/models/: data.py  ir.py  ir_levels.py  problem.py
orpilot/plugin/: plugin.json
orpilot/plugin/agents/: or_classifier.md  or_coder.md  or_extractor.md  or_formulator.md  or_interviewer.md  or_reporter.md  or_solver_fit.md  or_verifier.md
orpilot/plugin/commands/: benchmark.md  compile_ir.md  configure.md  interview.md  solve.md
orpilot/plugin/hooks/: on_user_confirm.md  post_code_gen.md  post_extraction.md
orpilot/plugin/schemas/: ir_schema_v2.json
orpilot/prompts/: _loader.py  data_guide.py  data_guide_spec_extraction.md  data_guide_system.md  direct_code_gen.py  direct_code_gen_cplex.md  direct_code_gen_gurobi.md  direct_code_gen_ortools.md  direct_code_gen_pulp.md  direct_code_gen_pyomo.md  ingestor.py  ingestor_system.md  interview.py  interview_summarize.md  interview_system.md  ir_builder.py  ir_compiler.py  ir_prompt.txt  ir_system.md  param_computation.py  param_computation_system.md  param_computation_user.md  report.py  report_system.md
orpilot/solver/: base.py  cplex_solver.py  gurobi_solver.py  ortools_solver.py  pulp_solver.py  pyomo_solver.py  registry.py
orpilot/verification/: __init__.py  verifier.py
orpilot/workflow/: edges.py  graph.py  problem_understanding.py  state.py
orpilot/workflow/nodes/: data_collection.py  direct_code_gen.py  interview.py  ir_builder.py  ir_compiler_node.py  param_computation.py  reporter.py  solver_runner.py
tests/benchmark/: conftest.py  test_NL4OPT.py  test_NLP4LP.py  test_compiler_only.py  test_full_pipeline.py  test_industryOR.py
tests/integration/: conftest.py  test_job_assignment.py  test_knapsack.py  test_transportation.py
tests/test_cli/: test_csv_parsing.py
tests/test_codegen/: test_data_validator.py  test_executor.py  test_ir_compiler.py  test_ir_validator.py
tests/test_llm/: test_base.py
tests/test_prompts/: test_loader.py
tests/test_solver/: test_registry.py
tests/test_workflow/: test_edges.py
