[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orpilot"
version = "0.1.0"
description = "ORPilot — AI Operations Research Agent — LLM-powered OR modeling and solving"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "ORPilot Contributors" },
]
keywords = ["operations research", "optimization", "llm", "ai", "pulp", "pyomo", "or-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "openai>=1.0",
    "anthropic>=0.30",
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
pulp = ["pulp>=2.7"]
pyomo = ["pyomo>=6.0"]
ortools = ["ortools>=9.0"]
all-solvers = ["pulp>=2.7", "pyomo>=6.0", "ortools>=9.0"]
hf = ["datasets>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pulp>=2.7",
    "pyomo>=6.0",
    "ortools>=9.0",
]

[project.scripts]
orpilot = "orpilot.cli:app"

[tool.hatch.build.targets.wheel]
include = [
    "orpilot/**/*.py",
    "orpilot/**/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (run with -m integration)",
    "industryOR: tests against CardinalOperations/IndustryOR dataset",
]
addopts = "-m 'not integration'"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%H:%M:%S"
